Close #71 Fix borders and alignment of speaker images
Set box sizing on the #speaker IDs to clip to border-box

--- a/2014/legacy-assets/styles/global.css
+++ b/2014/legacy-assets/styles/global.css
@@ -586,6 +586,7 @@ div.photos {
 }
 
 #speaker1, #speaker2, #speaker34, #speaker3, #speaker4, #speaker5, #speaker6, #speaker78, #speaker7, #speaker8 {
+	box-sizing: border-box;
 	float: right;
 	width: auto;
 	position: static;
@@ -600,23 +601,28 @@ div.photos {
 	width: 70%;
 	display: block;
 	float: right;
-	border-bottom: 1px solid #fafafa;
 	border-top: none;
 	vertical-align: top;
+	border-top: 1px solid #fafafa;
+	border-bottom: 1px solid #fafafa;
+	border-right: 1px solid #fafafa;
 }
 
 #speaker1 img {
-	border-right: 1px solid #fafafa;
 }
 
 #speaker2 {
 	width: 100%;
 	display: block;
 	float: right;
-	border-bottom: 1px solid #fafafa;
-	border-right: 1px solid #fafafa;
 	border-top: none;
 	vertical-align: top;
+	border-bottom: 1px solid #fafafa;
+	border-right: 1px solid #fafafa;
+}
+
+
+#speaker2 img {
 }
 
 #speaker34 {
@@ -624,18 +630,16 @@ div.photos {
 	width: 35%;
 	display: block;
 	float: right;
-	margin-left: -1px;
 }
 
 #speaker3 {
 	width: 100%;
-	margin-left: -1%;
 	float: right;
 	display: inline-block;
-	border-bottom: 1px solid #fafafa;
-	border-right: 1px solid #fafafa;
 	border-top: none;
 	vertical-align: top;
+	border-bottom: 1px solid #fafafa;
+	border-right: 1px solid #fafafa;
 }
 
 #speaker3 img {
@@ -647,8 +651,9 @@ div.photos {
 	float: right;
 	display: inline-block;
 	clear: both;
-	border-right: 1px solid #fafafa;
 	vertical-align: top;
+	border-top: 1px solid #fafafa;
+	border-right: 1px solid #fafafa;
 }
 
 #speaker4 img {
@@ -662,10 +667,10 @@ div.photos {
 	float: right;
 	border-top: none;
 	border-right: none;
+	border-bottom: 1px solid #fafafa;
 }
 
 #speaker5 img {
-	border-bottom: 1px solid #fafafa;
 	vertical-align: top;
 }
 
@@ -674,11 +679,11 @@ div.photos {
 	display: block;
 	float: right;
 	width: 100%;
-	border-right: none;
+	border-top: 1px solid #fafafa;
+	border-left: 1px solid white;
 }
 
 #speaker6 img {
-	border-left: 1px solid white;
 	vertical-align: top;
 }
 
@@ -698,19 +703,18 @@ div.tickets {
 	display: block;
 	float: right;
 	position: relative;
-	border-left: 0;
 }
 
-#speaker78 img {
-	border-right: 1px solid #fafafa;
-}
 
 #speaker7 {
 	vertical-align: top;
 	width: 50%;
 	display: block;
 	float: right;
-	border-bottom: 1px solid #fafafa;
+	border-left: 1px solid #fafafa;
+}
+
+#speaker7 img {
 }
 
 #speaker8 {
@@ -719,10 +723,10 @@ div.tickets {
 	display: block;
 	float: right;
 	border-bottom: 1px solid #fafafa;
+	border-left: 1px solid white;
 }
 
 #speaker8 img {
-	border-left: 1px solid white;
 }
 
 div.tickets {
@@ -1331,6 +1335,7 @@ div.sponsor-logo img {
 		vertical-align: bottom;
 		border-right: 1px solid #fafafa;
 		border-bottom: none;
+		transform: translateY(40%);
 	}
 
 	#speaker2 {
@@ -1354,7 +1359,6 @@ div.sponsor-logo img {
 		width: 65%;
 		display: inline-block;
 		float: right;
-		border-bottom: 1px solid #fafafa;
 		border-right: 1px solid #fafafa;
 		border-top: 1px solid #fafafa;
 		vertical-align: top;
